syntax = "proto3";

package com.oop.gof.cel;

option java_package = "com.oop.gof.cel";
option java_outer_classname = "AccountInfo";
option java_multiple_files = true;

import "google/protobuf/descriptor.proto";

message Account {
  extend google.protobuf.FieldOptions {
    string level =1234;
  }
  oneof client_id {
    string user_id = 1 [(level)="senior"];
    int64 gaia_id = 2;
  }
  string display_name = 3;
  string phone_number = 4;
  repeated string emails = 5;

  message Details {
    int64 max_amount =1;
  }
  Details details =6;
}